<resources>
    <string name="app_name">From The Top</string>
    <string name="from_the_top">From The Top</string>
    <string name="app_description">A free app for learning\nmusic theory.</string>
    <string name="continue_button">Continue</string>
    <string name="continue_scales">Continue to medium</string>
    <string name="home">Home</string>
    <string name="learn">Learn</string>
    <string name="quiz">Quiz</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="quiz_topics">Quiz: Topics</string>
    <string name="rhythm">Rhythm</string>
    <string name="scales">Scales</string>
    <string name="intervals">Intervals</string>
    <string name="quiz_rhythm">Quiz: Rhythm</string>
    <string name="quiz_scales">Quiz: Scales</string>
    <string name="quiz_intervals">Quiz: Intervals</string>
    <string name="learn_topics">Learn: Topics</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="attempts_default">Number of Attempts: 0</string>
    <string name="attempts_default_short">Attempts: 0</string>
    <string name="last_attempted_default">Last Attempted: N/A</string>
    <string name="last_attempted_default_short">Last: N/A</string>
    <string name="high_score_default">High Score: 0%</string>
    <string name="high_score_default_short">Best: 0%</string>
    <string name="course_completed_default">Course Completed: No</string>
    <string name="quiz_complete">Quiz Complete!</string>
    <string name="return_home">Return Home</string>
    <string name="test">Test My Knowledge!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="set_name">Please set your name</string>
    <string name="set_goals">How many days per week do you want to test your knowledge?</string>
    <string name="set_goal">Set goal</string>
    <string name="confirm">Confirm</string>
    <string name="sounds_great">Sounds great!</string>
    <string name="info">About</string>
    <string name="info_1">Music theory is best learned alongside the learning of an instrument. This is so the concepts can be used in practice which helps reinforce learning. As music performance and composition are such practical disciplines, this app is intended to be more of a supplement to the learning process and a reference guide rather than the primary means of learning. Take what you learn here and put it into practice!</string>
    <string name="info_2">Most of the learning sections feature audio examples whenever there is notation. Being able to hear what a concept sounds like, or to feel the vibrations for the hearing impaired, is essential to the learning process. It is therefore important that your device is able to play sound, either through speakers or headphones.</string>
    <string name="new_high_score">New High Score!</string>
    <string name="goal_reached">Congratulations! You\'ve reached your goal!</string>
    <string name="change">Change name/goal</string>
    <string name="learn_scales_0">[Audio examples are provided for each scale with a 4 beat count-in so you can play or sing along. Once you start to feel comfortable, try playing them by yourself, then try playing them in different keys!]</string>
    <string name="learn_scales_1">A scale is a succession of pitches ascending or descending in steps. There are two types of steps: <i>half steps</i> and <i>whole steps</i>. A half step (H) consists of two adjacent pitches on the keyboard. A whole step (W) consists of two half steps. Usually, the pitches in a scale are each notated with different letter names, though this isn’t always possible or desirable.</string>
    <string name="learn_scales_2">The Chromatic Scale</string>
    <string name="learn_scales_3">The chromatic scale consists entirely of half steps, and uses every pitch on the keyboard within a single octave. Here is the chromatic scale that spans the pitches C4 through C5.</string>
    <string name="learn_scales_4">The Major Scale</string>
    <string name="learn_scales_5">A major scale, a sound with which you are undoubtedly familiar, consists of seven whole (W) and half (H) steps in the following succession: W-W-H-W-W-W-H. The first pitch of the scale, called the <i>tonic</i>, is the pitch upon which the rest of the scale is based. When the scale ascends, the tonic is repeated at the end an octave higher.\n\nHere is the D major scale. It is called the “D major scale” because the pitch D is the <i>tonic</i> and is heard at both ends of the scale.</string>
    <string name="learn_scales_6">Scale Degrees and Solfège</string>
    <string name="learn_scales_7">While ISO notation allows us to label a pitch in its specific register, it is often useful to know where that pitch fits within a given scale. For example, the pitch class D is the first (and last) note of the D-major scale. The pitch class A is the fifth note of the D-major scale. When described in this way, we call the notes <i>scale</i> degrees, because they’re placed in context of a specific scale. Solfège syllables, a centuries-old method of teaching pitch and sight singing, can also be used to represent scale degrees (when used in this way, this system is specifically called movable-<i>do</i> solfège).\n\nScale degrees are labeled with Arabic numerals and carets (^). The illustration below shows a D-major scale and corresponding ISO notation, scale degrees, and solfège syllables.</string>
    <string name="learn_scales_8">The Minor Scale</string>
    <string name="learn_scales_9">Another scale with which you are likely very familiar is the minor scale. There are several scales that one might describe as <i>minor</i>, all of which have a characteristic third scale degree that is lower than the one found in the major scale. The minor scale most frequently used in tonal music from the Common Practice period is based on the <i>aeolian mode</i> (you’ll read more about modes later), which is sometimes referred to as the <i>natural minor</i> scale.\n\nThe natural minor scale consists of seven whole (W) and half (H) steps in the following succession: W-H-W-W-H-W-W. Note the changes in solfège syllables.</string>
    <string name="learn_scales_10">If you sing through the above example, you’ll notice that the ending lacks the same sense of closure you heard in the major scale. This closure is created in the major scale, in part, by the ascending semitone between <i>ti</i> and <i>do</i>. Composers often want to have this sense of closure when using the minor mode, too. They’re able to achieve this by applying an accidental to the seventh scale degree, raising it by a semitone. If you do this within the context of the natural minor scale, you get something called the <i>harmonic minor</i> scale.</string>
    <string name="learn_scales_11">Now the last two notes of the scale sound much more conclusive, but you might have found it difficult to sing <i>le</i> to <i>ti</i>. When writing melodies in a minor key, composers often “corrected” this by raising <i>le</i> by a semitone to become <i>la</i> when approaching the note <i>ti</i>. When the melody descended from <i>do</i>, the closure from <i>ti</i> to <i>do</i> isn’t needed; likewise, it is no longer necessary to “correct” <i>le</i>, so the natural form of the minor scale is used again. Together, these different ascending and descending versions are called the <i>melodic minor</i> scale.\n\nWhen ascending, the <i>melodic minor</i> scale uses <i>la</i> and <i>ti</i>.</string>
    <string name="learn_scales_12">When descending, the <i>melodic minor</i> scale uses the “natural” <i>te</i> and <i>le</i>.</string>
    <string name="learn_scales_13">Truth be told, most composers don’t really think about three different “forms” of the minor scale. The <i>harmonic minor</i> scale simply represents composers’ tendency to use <i>ti</i> when building harmonies that include the seventh scale degree in the minor mode. Likewise, the <i>melodic minor</i> scale is derived from composers’ desire to avoid the melodic augmented second interval (more on this in the intervals section) between <i>le</i> and <i>ti</i> (and some chose not to avoid this!). In reality, there is only one “version” of the minor scale. Context determines when a composer might use <i>la</i> and <i>ti</i> when writing music in a minor key.</string>
    <string name="learn_scales_2_1">Folk, pop, classical, and modern composers often organize pitch materials using scales other than major and minor. Some of these scales, like the various diatonic <i>modes</i> and the pentatonic collection, are relatively familiar to most listeners. Others — such as octatonic, whole-tone, and acoustic collections/scales — are more novel, and usually (but not always) found in twentieth- and twenty-first-century compositions.\n\nWhen characterizing many of these new musical resources, the word “collection” is often more appropriate than "scale." A <i>collection</i> is a group of notes — usually five or more. Imagine a collection as a source from which a composer can draw musical material — a kind of “soup” within which pitch-classes float freely. Collections by themselves do not imply a tonal center. But in a composition a composer may establish a tonal center by privileging one note of the collection, which we then call a <i>scale</i>.</string>
    <string name="learn_scales_2_2">Diatonic Collection (modes)</string>
    <string name="learn_rhythm_1">Rhythm refers to the combination of long and short durations in time. Durations are notated with either unfilled or filled noteheads. Unfilled noteheads can appear with or without a stem; filled noteheads always appear with a stem. Flags can be added to the stems of filled noteheads; each flag shortens the duration by half.</string>
    <string name="learn_rhythm_2">Rests</string>
    <string name="learn_rhythm_3">Rests represent silence in musical notation. For each durational symbol there exists a corresponding rest.</string>
    <string name="learn_rhythm_4">Dots and ties</string>
    <string name="learn_rhythm_5">Dots and ties allow for basic durations to be lengthened. A dot occurs after a pitch or a rest, and it increases its duration by half. For example, if a quarter note is equivalent in duration to two eighth notes, a dotted quarter note would be equivalent to <i>three</i> eighth notes. Generally, undotted notes divide into two notes; dotted notes divide into three. Thus, undotted notes are typically used to represent the beat level in simple meter, while dotted notes are used to represent the beat in compound meter.\n\nMultiple dots can be added to a duration. Subsequent dots add half the duration of the previous dot. For example, a quarter note with two dots would be equivalent in duration to a quarter, eighth, and sixteenth note.</string>
    <string name="learn_rhythm_6">A tie lengthens a duration by connecting two adjacent identical pitches. Ties are used to either sustain a pitch beyond the length of a single measure, or to make a particular rhythmic grouping in a measure more clear.\n\nIn the example below, the duration of the first pitch is longer than a single measure, so it is represented by tying the dotted half note, which lasts the full measure, to the first beat of the subsequent measure.\n\nTry clapping along! There is a one bar count-in of 3 beats. If you\'d rather play along, the note being played is C4 (middle C).</string>
</resources>