<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".Topics">

    <TextView
        android:id="@+id/text_view_learn_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/learn_topics"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_topics_to_learn_rhythm"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:text="@string/rhythm"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_learn_topics" />

    <Button
        android:id="@+id/button_topics_to_learn_scales"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/scales"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_topics_to_learn_rhythm" />

    <Button
        android:id="@+id/button_topics_to_learn_intervals"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/intervals"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_topics_to_learn_scales" />

</androidx.constraintlayout.widget.ConstraintLayout>